--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
