--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.11",
+    "@mui/joy": "^5.0.0-alpha.81",
     "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.11.12",
     "@reduxjs/toolkit": "^1.9.5",
