--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.11.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
