--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.22.0",
+    "moment": "^2.29.4",
     "nodeenv": "^3.0.75",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
