--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.22.0",
+    "formik": "^2.4.1",
     "moment": "^2.29.4",
     "nodeenv": "^3.0.75",
     "notistack": "^3.0.1",
@@ -25,7 +26,8 @@
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
