--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.22.0",
     "formik": "^2.4.1",
+    "jest": "^29.5.0",
+    "mailslurp-client": "^15.17.2",
     "moment": "^2.29.4",
     "nodeenv": "^3.0.75",
     "notistack": "^3.0.1",
+    "puppeteer": "^20.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -33,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
