--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.4.0",
     "firebase": "^9.22.0",
     "formik": "^2.4.1",
     "jest": "^29.5.0",
-    "mailslurp-client": "^15.17.2",
     "moment": "^2.29.4",
     "nodeenv": "^3.0.75",
     "notistack": "^3.0.1",
