--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "moment": "^2.29.4",
     "nodeenv": "^3.0.75",
     "notistack": "^3.0.1",
-    "puppeteer": "^20.8.0",
+    "puppeteer": "18.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
