--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-react": "^7.22.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.11",
     "@mui/joy": "^5.0.0-alpha.81",
@@ -16,11 +14,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^1.4.0",
-    "eventemitter3": "^5.0.1",
     "firebase": "^9.22.0",
     "formik": "^2.4.1",
-    "jest": "^29.5.0",
+    "fs": "^0.0.1-security",
+    "jest": "^29.6.1",
     "moment": "^2.29.4",
     "nodeenv": "^3.0.75",
     "notistack": "^3.0.1",
@@ -31,7 +28,6 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "redux-thunk": "^2.4.2",
     "typewriter-effect": "^2.19.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
@@ -40,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -60,8 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "jest-environment-jsdom": "^29.6.1"
   }
 }
