--- a/package.json
+++ b/package.json
@@ -3,24 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.22.5",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.132",
+    "@mui/joy": "^5.0.0-alpha.81",
+    "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.11.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.4.0",
+    "eventemitter3": "^5.0.1",
     "firebase": "^9.22.0",
     "formik": "^2.4.1",
-    "jest": "^29.6.1",
+    "jest": "^29.5.0",
     "moment": "^2.29.4",
     "nodeenv": "^3.0.75",
     "notistack": "^3.0.1",
-    "puppeteer": "18.1.0",
+    "puppeteer": "^20.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
